# Agent-augmented-Cost-Analytics-MSc-

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_dashboard_on_sample.py
.github/workflows/: ci.yml
data/: DataChangeLog.md  DataGeneration.md  EDA.md  README.md  anomaly_scenarios.yaml  config_data_generator.yaml  eda-notebook.ipynb  generate_sample_with_metadata.py  generator.py  inject_anomalies.py  labels.jsonl  service_costs.py  users_activity.py
data/samples/: joint_info_sample.csv  joint_info_sample.meta.json  sample_config.yaml
docs/: dev_workflow.md
docs/data/: evidence_pack_contract.md
docs/development/: iteration_checklist.md
docs/governance/: ethic_statement.md  security_and_data_handling.md
src/cost_agent_mvp/: __init__.py
src/cost_agent_mvp/agent/: analyst.py  orchestrator.py  orchestrator_langgraph.py  planner.py  prompt_loader.py  verifier.py
src/cost_agent_mvp/agent/prompts/: analyst_system.md  analyst_user.md  planner_system.md  planner_user.md  verifier_system.md  verifiers_user.md
src/cost_agent_mvp/analytics/: __init__.py  evidence_pack.py  kpi_definitions.py
src/cost_agent_mvp/cli/: __init__.py  __main__.py  doctor.py  run_daily_report.py
src/cost_agent_mvp/core/: __init__.py  constants.py  errors.py  run_record.py  types.py  utils_dates.py  utils_hash.py
src/cost_agent_mvp/data/: __init__.py  csv_backend.py  schema.py
src/cost_agent_mvp/reports/: daily_report.py  summary_generator.py
src/cost_agent_mvp/ui/: tg_bot.py
src/cost_agent_mvp/viz/: __init__.py  chart_specs.py  dashboard_builder.py
tests/: conftest.py  m0-01_test_pyproject_toml.py  m0_test_results.json  test_anomaly_injection.py  test_cli_doctor.py  test_csv_backend.py  test_dashboard_builder_smoke.py  test_evidence_pack.py  test_evidence_pack_contract.py  test_generator_metadata.py  test_import_smoke.py  test_kpi_definitions.py  test_kpis_golden_snapshot.py  test_load_csv.py  test_run_record.py  test_sample_data.py  test_schema.py  test_summary_generator.py
tests/fixtures/: kpi_fixture.csv
tests/golden/: kpis_expected.json
